<resources>
    <string name="app_name">LiftBro</string>

    <!-- About -->
    <string name="about_msg">Capstone Project for Udacity Android Developer Nanodegree</string>
    <string name="about_me">Nino Munoz\n<a href="https://github.com/ninomunoz">Github</a>" | "<a href="https://www.linkedin.com/in/ninomunoz">LinkedIn</a></string>

    <!-- Invite -->
    <string name="invite_msg">"Check out LiftBro on GitHub!\n\nhttps://github.com/ninomunoz/LiftBro"</string>
    <string name="chooser_msg">Share this app using:</string>

    <!-- AddExerciseFragment -->
    <string name="muscle_group">Muscle Group</string>
    <string name="exercise">Exercise</string>

    <!-- WorkoutDetailFragment -->
    <string name="share_msg">Check out this %1$s workout!\n\n</string>

    <!-- EditWorkoutFragment -->
    <string name="delete_all_caps">DELETE</string>

    <!-- AddExerciseFragment -->
    <string name="rb_sets_reps">Sets/Reps</string>
    <string name="time">Time</string>

    <!-- Dialogs -->
    <string name="add_workout">Add Workout</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="rename_workout">Rename Workout</string>
    <string name="dlg_delete_workout_msg">Are you sure you want to delete this workout?</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="workout_name">Workout Name</string>
    <string name="sets">sets</string>
    <string name="reps">reps</string>
    <string name="lbs">lbs</string>

    <!-- Menu -->
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="invite">Invite</string>
    <string name="about">About</string>

    <!-- Stopwatch -->
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>

    <!-- Arrays -->
    <string-array name="np_time_array">
        <item>sec</item>
        <item>min</item>
    </string-array>

    <string-array name="muscle_array">
        <item>Abs</item>
        <item>Back</item>
        <item>Biceps</item>
        <item>Cardio</item>
        <item>Chest</item>
        <item>Forearm</item>
        <item>Glutes</item>
        <item>Lower Leg</item>
        <item>Shoulders</item>
        <item>Triceps</item>
        <item>Upper Leg</item>
    </string-array>

</resources>
