<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="com.example.liftbro.fragment.AddExerciseFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/muscle_group"
        style="@style/InputLabel" />

    <Spinner
        android:id="@+id/spinnerMuscleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        android:layout_marginTop="16dp"
        style="@style/InputLabel" />

    <Spinner
        android:id="@+id/spinnerExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/rbSetsReps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sets_reps"
            style="?android:attr/spinnerDropDownItemStyle"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rbTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/spinnerDropDownItemStyle"
            android:text="@string/time"
            android:checked="false"/>

    </RadioGroup>

</LinearLayout>