<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp"
    android:gravity="center">

    <NumberPicker
        android:id="@+id/np_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants" />

    <TextView
        android:id="@+id/lbl_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sets"
        android:paddingEnd="10dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/np_sets" />

    <NumberPicker
        android:id="@+id/np_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:layout_toEndOf="@id/lbl_sets" />

    <TextView
        android:id="@+id/lbl_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        android:paddingEnd="10dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/np_reps" />

    <NumberPicker
        android:id="@+id/np_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:layout_toEndOf="@id/lbl_reps" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbs"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/np_weight" />

</RelativeLayout>